include/El/core/DistMatrix.h

/* NOTE: "ElInt* rowInd" and "ElInt* colInd" have been converted to 
         "ElInt* rowInd" and "ElInt* colInd" due to what appears to be a bug
         in /usr/bin/c++ in Ubuntu */

typedef struct 
{
    ElDist colDist, rowDist;
    int colAlign, rowAlign;
    int root;
    ElConstGrid grid;
} ElElementalData;
/* An anonymous struct meant as a placeholder for ElementalMatrix<T>
   ----------------------------------------------------------------- */
typedef struct ElDistMatrix_iDummy* ElDistMatrix_i;
typedef struct ElDistMatrix_sDummy* ElDistMatrix_s;
typedef struct ElDistMatrix_dDummy* ElDistMatrix_d;
typedef struct ElDistMatrix_cDummy* ElDistMatrix_c;
typedef struct ElDistMatrix_zDummy* ElDistMatrix_z;
typedef const struct ElDistMatrix_iDummy* ElConstDistMatrix_i;
typedef const struct ElDistMatrix_sDummy* ElConstDistMatrix_s;
typedef const struct ElDistMatrix_dDummy* ElConstDistMatrix_d;
typedef const struct ElDistMatrix_cDummy* ElConstDistMatrix_c;
typedef const struct ElDistMatrix_zDummy* ElConstDistMatrix_z;
/* void ElementalMatrix<T>::AlignWith
   ( const DistData& data, bool constrain )
   ---------------------------------------- */
EL_EXPORT ElError ElDistMatrixAlignWith_i
( ElDistMatrix_i A, ElElementalData distData, bool constrain );
EL_EXPORT ElError ElDistMatrixAlignWith_s
( ElDistMatrix_s A, ElElementalData distData, bool constrain );
EL_EXPORT ElError ElDistMatrixAlignWith_d
( ElDistMatrix_d A, ElElementalData distData, bool constrain );
EL_EXPORT ElError ElDistMatrixAlignWith_c
( ElDistMatrix_c A, ElElementalData distData, bool constrain );
EL_EXPORT ElError ElDistMatrixAlignWith_z
( ElDistMatrix_z A, ElElementalData distData, bool constrain );
/* void ElementalMatrix<T>::AlignColsWith
   ( const DistData& data, bool constrain )
   ---------------------------------------- */
EL_EXPORT ElError ElDistMatrixAlignColsWith_i
( ElDistMatrix_i A, ElElementalData distData, bool constrain );
EL_EXPORT ElError ElDistMatrixAlignColsWith_s
( ElDistMatrix_s A, ElElementalData distData, bool constrain );
EL_EXPORT ElError ElDistMatrixAlignColsWith_d
( ElDistMatrix_d A, ElElementalData distData, bool constrain );
EL_EXPORT ElError ElDistMatrixAlignColsWith_c
( ElDistMatrix_c A, ElElementalData distData, bool constrain );
EL_EXPORT ElError ElDistMatrixAlignColsWith_z
( ElDistMatrix_z A, ElElementalData distData, bool constrain );
/* void ElementalMatrix<T>::AlignRowsWith
   ( const DistData& data, bool constrain )
   ---------------------------------------- */
EL_EXPORT ElError ElDistMatrixAlignRowsWith_i
( ElDistMatrix_i A, ElElementalData distData, bool constrain );
EL_EXPORT ElError ElDistMatrixAlignRowsWith_s
( ElDistMatrix_s A, ElElementalData distData, bool constrain );
EL_EXPORT ElError ElDistMatrixAlignRowsWith_d
( ElDistMatrix_d A, ElElementalData distData, bool constrain );
EL_EXPORT ElError ElDistMatrixAlignRowsWith_c
( ElDistMatrix_c A, ElElementalData distData, bool constrain );
EL_EXPORT ElError ElDistMatrixAlignRowsWith_z
( ElDistMatrix_z A, ElElementalData distData, bool constrain );
/* void ElementalMatrix<T>::AlignAndResize
  ( int colAlign, int rowAlign, Int height, Int width, 
    bool force, bool constrain )
   --------------------------------------------------- */
EL_EXPORT ElError ElDistMatrixAlignAndResize_i
( ElDistMatrix_i A, int colAlign, int rowAlign, ElInt height, ElInt width, 
  bool force, bool constrain );
EL_EXPORT ElError ElDistMatrixAlignAndResize_s
( ElDistMatrix_s A, int colAlign, int rowAlign, ElInt height, ElInt width, 
  bool force, bool constrain );
EL_EXPORT ElError ElDistMatrixAlignAndResize_d
( ElDistMatrix_d A, int colAlign, int rowAlign, ElInt height, ElInt width,
  bool force, bool constrain );
EL_EXPORT ElError ElDistMatrixAlignAndResize_c
( ElDistMatrix_c A, int colAlign, int rowAlign, ElInt height, ElInt width,
  bool force, bool constrain );
EL_EXPORT ElError ElDistMatrixAlignAndResize_z
( ElDistMatrix_z A, int colAlign, int rowAlign, ElInt height, ElInt width,
  bool force, bool constrain );
/* void ElementalMatrix<T>::AlignColsAndResize
   ( int colAlign, Int height, Int width, bool force, bool constrain )
   ------------------------------------------------------------------- */
EL_EXPORT ElError ElDistMatrixAlignColsAndResize_i
( ElDistMatrix_i A, int colAlign, ElInt height, ElInt width, 
  bool force, bool constrain );
EL_EXPORT ElError ElDistMatrixAlignColsAndResize_s
( ElDistMatrix_s A, int colAlign, ElInt height, ElInt width, 
  bool force, bool constrain );
EL_EXPORT ElError ElDistMatrixAlignColsAndResize_d
( ElDistMatrix_d A, int colAlign, ElInt height, ElInt width, 
  bool force, bool constrain );
EL_EXPORT ElError ElDistMatrixAlignColsAndResize_c
( ElDistMatrix_c A, int colAlign, ElInt height, ElInt width, 
  bool force, bool constrain );
EL_EXPORT ElError ElDistMatrixAlignColsAndResize_z
( ElDistMatrix_z A, int colAlign, ElInt height, ElInt width, 
  bool force, bool constrain );
/* void ElementalMatrix<T>::AlignRowsAndResize
  ( int rowAlign, Int height, Int width, bool force, bool constrain )
   ------------------------------------------------------------------ */
EL_EXPORT ElError ElDistMatrixAlignRowsAndResize_i
( ElDistMatrix_i A, int rowAlign, ElInt height, ElInt width,
  bool force, bool constrain );
EL_EXPORT ElError ElDistMatrixAlignRowsAndResize_s
( ElDistMatrix_s A, int rowAlign, ElInt height, ElInt width,
  bool force, bool constrain );
EL_EXPORT ElError ElDistMatrixAlignRowsAndResize_d
( ElDistMatrix_d A, int rowAlign, ElInt height, ElInt width,
  bool force, bool constrain );
EL_EXPORT ElError ElDistMatrixAlignRowsAndResize_c
( ElDistMatrix_c A, int rowAlign, ElInt height, ElInt width,
  bool force, bool constrain );
EL_EXPORT ElError ElDistMatrixAlignRowsAndResize_z
( ElDistMatrix_z A, int rowAlign, ElInt height, ElInt width,
  bool force, bool constrain );
/* void ElementalMatrix<T>::Attach
   ( Int height, Int width, const Grid& grid, int colAlign, int rowAlign, 
     T* buffer, Int ldim, int root )
   ---------------------------------------------------------------------- */
EL_EXPORT ElError ElDistMatrixAttach_i
( ElDistMatrix_i A, ElInt height, ElInt width, ElConstGrid grid,
  int colAlign, int rowAlign, ElInt* buffer, ElInt ldim, 
  int root );
EL_EXPORT ElError ElDistMatrixAttach_s
( ElDistMatrix_s A, ElInt height, ElInt width, ElConstGrid grid,
  int colAlign, int rowAlign, float* buffer, ElInt ldim, 
  int root );
EL_EXPORT ElError ElDistMatrixAttach_d
( ElDistMatrix_d A, ElInt height, ElInt width, ElConstGrid grid,
  int colAlign, int rowAlign, double* buffer, ElInt ldim, 
  int root );
EL_EXPORT ElError ElDistMatrixAttach_c
( ElDistMatrix_c A, ElInt height, ElInt width, ElConstGrid grid,
  int colAlign, int rowAlign, complex_float* buffer, ElInt ldim, 
  int root );
EL_EXPORT ElError ElDistMatrixAttach_z
( ElDistMatrix_z A, ElInt height, ElInt width, ElConstGrid grid,
  int colAlign, int rowAlign, complex_double* buffer, ElInt ldim, 
  int root );
/* void ElementalMatrix<T>::LockedAttach
   ( Int height, Int width, const Grid& grid, int colAlign, int rowAlign, 
     const T* buffer, Int ldim, int root )
   ---------------------------------------------------------------------- */
EL_EXPORT ElError ElDistMatrixLockedAttach_i
( ElDistMatrix_i A, ElInt height, ElInt width, ElConstGrid grid,
  int colAlign, int rowAlign, const ElInt* buffer, 
  ElInt ldim, int root );
EL_EXPORT ElError ElDistMatrixLockedAttach_s
( ElDistMatrix_s A, ElInt height, ElInt width, ElConstGrid grid,
  int colAlign, int rowAlign, const float* buffer, 
  ElInt ldim, int root );
EL_EXPORT ElError ElDistMatrixLockedAttach_d
( ElDistMatrix_d A, ElInt height, ElInt width, ElConstGrid grid,
  int colAlign, int rowAlign, const double* buffer, 
  ElInt ldim, int root );
EL_EXPORT ElError ElDistMatrixLockedAttach_c
( ElDistMatrix_c A, ElInt height, ElInt width, ElConstGrid grid,
  int colAlign, int rowAlign, const complex_float* buffer, 
  ElInt ldim, int root );
EL_EXPORT ElError ElDistMatrixLockedAttach_z
( ElDistMatrix_z A, ElInt height, ElInt width, ElConstGrid grid,
  int colAlign, int rowAlign, const complex_double* buffer, 
  ElInt ldim, int root );
/* Int AbstractDistMatrix<T>::Height() const
   ----------------------------------------- */
EL_EXPORT ElError ElDistMatrixHeight_i( ElConstDistMatrix_i A, ElInt* height );
EL_EXPORT ElError ElDistMatrixHeight_s( ElConstDistMatrix_s A, ElInt* height );
EL_EXPORT ElError ElDistMatrixHeight_d( ElConstDistMatrix_d A, ElInt* height );
EL_EXPORT ElError ElDistMatrixHeight_c( ElConstDistMatrix_c A, ElInt* height );
EL_EXPORT ElError ElDistMatrixHeight_z( ElConstDistMatrix_z A, ElInt* height );
/* Int AbstractDistMatrix<T>::Width() const
   ---------------------------------------- */
EL_EXPORT ElError ElDistMatrixWidth_i( ElConstDistMatrix_i A, ElInt* width );
EL_EXPORT ElError ElDistMatrixWidth_s( ElConstDistMatrix_s A, ElInt* width );
EL_EXPORT ElError ElDistMatrixWidth_d( ElConstDistMatrix_d A, ElInt* width );
EL_EXPORT ElError ElDistMatrixWidth_c( ElConstDistMatrix_c A, ElInt* width );
EL_EXPORT ElError ElDistMatrixWidth_z( ElConstDistMatrix_z A, ElInt* width );
/* Int AbstractDistMatrix<T>::DiagonalLength( Int offset ) const
   ------------------------------------------------------------- */
EL_EXPORT ElError ElDistMatrixDiagonalLength_i
( ElConstDistMatrix_i A, ElInt offset, ElInt* length );
EL_EXPORT ElError ElDistMatrixDiagonalLength_s
( ElConstDistMatrix_s A, ElInt offset, ElInt* length );
EL_EXPORT ElError ElDistMatrixDiagonalLength_d
( ElConstDistMatrix_d A, ElInt offset, ElInt* length );
EL_EXPORT ElError ElDistMatrixDiagonalLength_c
( ElConstDistMatrix_c A, ElInt offset, ElInt* length );
EL_EXPORT ElError ElDistMatrixDiagonalLength_z
( ElConstDistMatrix_z A, ElInt offset, ElInt* length );
/* bool AbstractDistMatrix<T>::Viewing() const
   -------------------------------------------- */
EL_EXPORT ElError ElDistMatrixViewing_i( ElConstDistMatrix_i A, bool* viewing );
EL_EXPORT ElError ElDistMatrixViewing_s( ElConstDistMatrix_s A, bool* viewing );
EL_EXPORT ElError ElDistMatrixViewing_d( ElConstDistMatrix_d A, bool* viewing );
EL_EXPORT ElError ElDistMatrixViewing_c( ElConstDistMatrix_c A, bool* viewing );
EL_EXPORT ElError ElDistMatrixViewing_z( ElConstDistMatrix_z A, bool* viewing );
/* bool AbstractDistMatrix<T>::Locked() const
   ------------------------------------------ */
EL_EXPORT ElError ElDistMatrixLocked_i( ElConstDistMatrix_i A, bool* locked );
EL_EXPORT ElError ElDistMatrixLocked_s( ElConstDistMatrix_s A, bool* locked );
EL_EXPORT ElError ElDistMatrixLocked_d( ElConstDistMatrix_d A, bool* locked );
EL_EXPORT ElError ElDistMatrixLocked_c( ElConstDistMatrix_c A, bool* locked );
EL_EXPORT ElError ElDistMatrixLocked_z( ElConstDistMatrix_z A, bool* locked );
/* Int AbstractDistMatrix<T>::LocalHeight() const
   ---------------------------------------------- */
EL_EXPORT ElError ElDistMatrixLocalHeight_i
( ElConstDistMatrix_i A, ElInt* localHeight );
EL_EXPORT ElError ElDistMatrixLocalHeight_s
( ElConstDistMatrix_s A, ElInt* localHeight );
EL_EXPORT ElError ElDistMatrixLocalHeight_d
( ElConstDistMatrix_d A, ElInt* localHeight );
EL_EXPORT ElError ElDistMatrixLocalHeight_c
( ElConstDistMatrix_c A, ElInt* localHeight );
EL_EXPORT ElError ElDistMatrixLocalHeight_z
( ElConstDistMatrix_z A, ElInt* localHeight );