python/core/DistMatrix.py


  # Align this matrix with another distributed matrix as much as possible
  # ---------------------------------------------------------------------
  lib.ElDistMatrixAlignWith_i.argtypes = \
  lib.ElDistMatrixAlignWith_s.argtypes = \
  lib.ElDistMatrixAlignWith_d.argtypes = \
  lib.ElDistMatrixAlignWith_c.argtypes = \
  lib.ElDistMatrixAlignWith_z.argtypes = \
    [c_void_p,DistData,bType]
  def AlignWith(self,distData,constrain):
    args = [self.obj,distData,constrain]
    if   self.tag == iTag: lib.ElDistMatrixAlignWith_i(*args)
    elif self.tag == sTag: lib.ElDistMatrixAlignWith_s(*args)
    elif self.tag == dTag: lib.ElDistMatrixAlignWith_d(*args)
    elif self.tag == cTag: lib.ElDistMatrixAlignWith_c(*args)
    elif self.tag == zTag: lib.ElDistMatrixAlignWith_z(*args)
    else: DataExcept()

  # Align the column distribution of this matrix with another distributed matrix
  # ----------------------------------------------------------------------------
  lib.ElDistMatrixAlignColsWith_i.argtypes = \
  lib.ElDistMatrixAlignColsWith_s.argtypes = \
  lib.ElDistMatrixAlignColsWith_d.argtypes = \
  lib.ElDistMatrixAlignColsWith_c.argtypes = \
  lib.ElDistMatrixAlignColsWith_z.argtypes = \
    [c_void_p,DistData,bType]
  def AlignColsWith(self,distData,constrain):
    args = [self.obj,distData,constrain]
    if   self.tag == iTag: lib.ElDistMatrixAlignColsWith_i(*args)
    elif self.tag == sTag: lib.ElDistMatrixAlignColsWith_s(*args)
    elif self.tag == dTag: lib.ElDistMatrixAlignColsWith_d(*args)
    elif self.tag == cTag: lib.ElDistMatrixAlignColsWith_c(*args)
    elif self.tag == zTag: lib.ElDistMatrixAlignColsWith_z(*args)
    else: DataExcept()

  # Align the row distribution of the matrix with another distributed matrix
  # ------------------------------------------------------------------------
  lib.ElDistMatrixAlignRowsWith_i.argtypes = \
  lib.ElDistMatrixAlignRowsWith_s.argtypes = \
  lib.ElDistMatrixAlignRowsWith_d.argtypes = \
  lib.ElDistMatrixAlignRowsWith_c.argtypes = \
  lib.ElDistMatrixAlignRowsWith_z.argtypes = \
    [c_void_p,DistData,bType]
  def AlignRowsWith(self,distData,constrain):
    args = [self.obj,distData,constrain]
    if   self.tag == iTag: lib.ElDistMatrixAlignRowsWith_i(*args)
    elif self.tag == sTag: lib.ElDistMatrixAlignRowsWith_s(*args)
    elif self.tag == dTag: lib.ElDistMatrixAlignRowsWith_d(*args)
    elif self.tag == cTag: lib.ElDistMatrixAlignRowsWith_c(*args)
    elif self.tag == zTag: lib.ElDistMatrixAlignRowsWith_z(*args)
    else: DataExcept()

  # Align this matrix with another and then resize
  # ----------------------------------------------
  lib.ElDistMatrixAlignAndResize_i.argtypes = \
  lib.ElDistMatrixAlignAndResize_s.argtypes = \
  lib.ElDistMatrixAlignAndResize_d.argtypes = \
  lib.ElDistMatrixAlignAndResize_c.argtypes = \
  lib.ElDistMatrixAlignAndResize_z.argtypes = \
    [c_void_p,c_int,c_int,iType,iType,bType,bType]
  def AlignAndResize(self,colAlign,rowAlign,m,n,force,constrain):
    args = [self.obj,colAlign,rowAlign,m,n,force,constrain]
    if   self.tag == iTag: lib.ElDistMatrixAlignAndResize_i(*args)
    elif self.tag == sTag: lib.ElDistMatrixAlignAndResize_s(*args)
    elif self.tag == cTag: lib.ElDistMatrixAlignAndResize_c(*args)
    elif self.tag == zTag: lib.ElDistMatrixAlignAndResize_z(*args)
    else: DataExcept()

  # Align the columns with another matrix and then resize
  # -----------------------------------------------------
  lib.ElDistMatrixAlignColsAndResize_i.argtypes = \
  lib.ElDistMatrixAlignColsAndResize_s.argtypes = \
  lib.ElDistMatrixAlignColsAndResize_d.argtypes = \
  lib.ElDistMatrixAlignColsAndResize_c.argtypes = \
  lib.ElDistMatrixAlignColsAndResize_z.argtypes = \
    [c_void_p,c_int,iType,iType,bType,bType]
  def AlignColsAndResize(self,colAlign,m,n,force,constrain):
    args = [self.obj,colAlign,m,n,force,constrain]
    if   self.tag == iTag: lib.ElDistMatrixAlignColsAndResize_i(*args)
    elif self.tag == sTag: lib.ElDistMatrixAlignColsAndResize_s(*args)
    elif self.tag == cTag: lib.ElDistMatrixAlignColsAndResize_c(*args)
    elif self.tag == zTag: lib.ElDistMatrixAlignColsAndResize_z(*args)
    else: DataExcept()

  # Align the rows with another matrix and then resize
  # --------------------------------------------------
  lib.ElDistMatrixAlignRowsAndResize_i.argtypes = \
  lib.ElDistMatrixAlignRowsAndResize_s.argtypes = \
  lib.ElDistMatrixAlignRowsAndResize_d.argtypes = \
  lib.ElDistMatrixAlignRowsAndResize_c.argtypes = \
  lib.ElDistMatrixAlignRowsAndResize_z.argtypes = \
    [c_void_p,c_int,iType,iType,bType,bType]
  def AlignRowsAndResize(self,rowAlign,m,n,force,constrain):
    args = [self.obj,rowAlign,m,n,force,constrain]
    if   self.tag == iTag: lib.ElDistMatrixAlignRowsAndResize_i(*args)
    elif self.tag == sTag: lib.ElDistMatrixAlignRowsAndResize_s(*args)
    elif self.tag == cTag: lib.ElDistMatrixAlignRowsAndResize_c(*args)
    elif self.tag == zTag: lib.ElDistMatrixAlignRowsAndResize_z(*args)
    else: DataExcept()

  # Attach a buffer to the matrix
  # -----------------------------
  lib.ElDistMatrixAttach_i.argtypes = \
  lib.ElDistMatrixLockedAttach_i.argtypes = \
    [c_void_p,iType,iType,c_void_p,c_int,c_int,POINTER(iType),iType,c_int]
  lib.ElDistMatrixAttach_s.argtypes = \
  lib.ElDistMatrixLockedAttach_s.argtypes = \
    [c_void_p,iType,iType,c_void_p,c_int,c_int,POINTER(sType),iType,c_int]
  lib.ElDistMatrixAttach_d.argtypes = \
  lib.ElDistMatrixLockedAttach_d.argtypes = \
    [c_void_p,iType,iType,c_void_p,c_int,c_int,POINTER(dType),iType,c_int]
  lib.ElDistMatrixAttach_c.argtypes = \
  lib.ElDistMatrixLockedAttach_c.argtypes = \
    [c_void_p,iType,iType,c_void_p,c_int,c_int,POINTER(cType),iType,c_int]
  lib.ElDistMatrixAttach_z.argtypes = \
  lib.ElDistMatrixLockedAttach_z.argtypes = \
    [c_void_p,iType,iType,c_void_p,c_int,c_int,POINTER(zType),iType,c_int]
  def Attach(self,m,n,grid,colAlign,rowAlign,buf,ldim,root,locked=False):
    args = [self.obj,m,n,grid.obj,colAlign,rowAlign,buf,ldim,root]
    if locked:
      if   self.tag == iTag: lib.ElDistMatrixLockedAttach_i(*args)
      elif self.tag == sTag: lib.ElDistMatrixLockedAttach_s(*args)
      elif self.tag == dTag: lib.ElDistMatrixLockedAttach_d(*args)
      elif self.tag == cTag: lib.ElDistMatrixLockedAttach_c(*args)
      elif self.tag == zTag: lib.ElDistMatrixLockedAttach_z(*args)
      else: DataExcept()
    else:
      if   self.tag == iTag: lib.ElDistMatrixAttach_i(*args)
      elif self.tag == sTag: lib.ElDistMatrixAttach_s(*args)
      elif self.tag == dTag: lib.ElDistMatrixAttach_d(*args)
      elif self.tag == cTag: lib.ElDistMatrixAttach_c(*args)
      elif self.tag == zTag: lib.ElDistMatrixAttach_z(*args)
      else: DataExcept()

  # Return the height of the matrix
  # -------------------------------
  lib.ElDistMatrixHeight_i.argtypes = \
  lib.ElDistMatrixHeight_s.argtypes = \
  lib.ElDistMatrixHeight_d.argtypes = \
  lib.ElDistMatrixHeight_c.argtypes = \
  lib.ElDistMatrixHeight_z.argtypes = \
    [c_void_p,POINTER(iType)]
  def Height(self):
    m = iType()
    args = [self.obj,pointer(m)]
    if   self.tag == iTag: lib.ElDistMatrixHeight_i(*args)
    elif self.tag == sTag: lib.ElDistMatrixHeight_s(*args)
    elif self.tag == dTag: lib.ElDistMatrixHeight_d(*args)
    elif self.tag == cTag: lib.ElDistMatrixHeight_c(*args)
    elif self.tag == zTag: lib.ElDistMatrixHeight_z(*args)
    else: DataExcept()
    return m.value

  # Return the width of the matrix
  # ------------------------------
  lib.ElDistMatrixWidth_i.argtypes = \
  lib.ElDistMatrixWidth_s.argtypes = \
  lib.ElDistMatrixWidth_d.argtypes = \
  lib.ElDistMatrixWidth_c.argtypes = \
  lib.ElDistMatrixWidth_z.argtypes = \
    [c_void_p,POINTER(iType)]
  def Width(self):
    n = iType()
    args = [self.obj,pointer(n)]
    if   self.tag == iTag: lib.ElDistMatrixWidth_i(*args)
    elif self.tag == sTag: lib.ElDistMatrixWidth_s(*args)
    elif self.tag == dTag: lib.ElDistMatrixWidth_d(*args)
    elif self.tag == cTag: lib.ElDistMatrixWidth_c(*args)
    elif self.tag == zTag: lib.ElDistMatrixWidth_z(*args)
    else: DataExcept()
    return n.value

  # Return the diagonal length of the matrix
  # ----------------------------------------
  lib.ElDistMatrixDiagonalLength_i.argtypes = \
  lib.ElDistMatrixDiagonalLength_s.argtypes = \
  lib.ElDistMatrixDiagonalLength_d.argtypes = \
  lib.ElDistMatrixDiagonalLength_c.argtypes = \
  lib.ElDistMatrixDiagonalLength_z.argtypes = \
    [c_void_p,iType,POINTER(iType)]
  def DiagonalLength(self,offset=0):
    length = iType()
    args = [self.obj,offset,pointer(length)]
    if   self.tag == iTag: lib.ElDistMatrixDiagonalLength_i(*args)
    elif self.tag == sTag: lib.ElDistMatrixDiagonalLength_s(*args)
    elif self.tag == dTag: lib.ElDistMatrixDiagonalLength_d(*args)
    elif self.tag == cTag: lib.ElDistMatrixDiagonalLength_c(*args)
    elif self.tag == zTag: lib.ElDistMatrixDiagonalLength_z(*args)
    else: DataExcept()
    return length.value

  # Return whether or not the matrix is viewing a buffer (rather than owning it)
  # ----------------------------------------------------------------------------
  lib.ElDistMatrixViewing_i.argtypes = \
  lib.ElDistMatrixViewing_s.argtypes = \
  lib.ElDistMatrixViewing_d.argtypes = \
  lib.ElDistMatrixViewing_c.argtypes = \
  lib.ElDistMatrixViewing_z.argtypes = \
    [c_void_p,POINTER(bType)]
  def Viewing(self):
    viewing = bType()
    args = [self.obj,pointer(viewing)]
    if   self.tag == iTag: lib.ElDistMatrixViewing_i(*args)
    elif self.tag == sTag: lib.ElDistMatrixViewing_s(*args)
    elif self.tag == dTag: lib.ElDistMatrixViewing_d(*args)
    elif self.tag == cTag: lib.ElDistMatrixViewing_c(*args)
    elif self.tag == zTag: lib.ElDistMatrixViewing_z(*args)
    else: DataExcept()
    return viewing.value

  #  Return whether or not the matrix is "locked"/immutable
  # -------------------------------------------------------
  lib.ElDistMatrixLocked_i.argtypes = \
  lib.ElDistMatrixLocked_s.argtypes = \
  lib.ElDistMatrixLocked_d.argtypes = \
  lib.ElDistMatrixLocked_c.argtypes = \
  lib.ElDistMatrixLocked_z.argtypes = \
    [c_void_p,POINTER(bType)]
  def Locked(self):
    locked = bType()
    args = [self.obj,pointer(locked)]
    if   self.tag == iTag: lib.ElDistMatrixLocked_i(*args)
    elif self.tag == sTag: lib.ElDistMatrixLocked_s(*args)
    elif self.tag == dTag: lib.ElDistMatrixLocked_d(*args)
    elif self.tag == cTag: lib.ElDistMatrixLocked_c(*args)
    elif self.tag == zTag: lib.ElDistMatrixLocked_z(*args)
    else: DataExcept()
    return locked.value

  # Return the local height of the matrix
  # -------------------------------------
  lib.ElDistMatrixLocalHeight_i.argtypes = \
  lib.ElDistMatrixLocalHeight_s.argtypes = \
  lib.ElDistMatrixLocalHeight_d.argtypes = \
  lib.ElDistMatrixLocalHeight_c.argtypes = \
  lib.ElDistMatrixLocalHeight_z.argtypes = \
    [c_void_p,POINTER(iType)]
  def LocalHeight(self):
    mLoc = iType()
    args = [self.obj,pointer(mLoc)]
    if   self.tag == iTag: lib.ElDistMatrixLocalHeight_i(*args)
    elif self.tag == sTag: lib.ElDistMatrixLocalHeight_s(*args)
    elif self.tag == dTag: lib.ElDistMatrixLocalHeight_d(*args)
    elif self.tag == cTag: lib.ElDistMatrixLocalHeight_c(*args)
    elif self.tag == zTag: lib.ElDistMatrixLocalHeight_z(*args)
    else: DataExcept()
    return mLoc.value
